# Hikaze-Model-Manager-2

./: .coverage  .gitignore  DESIGN_REPORT.md  DEVELOPMENT.md  HIKAZE_MODEL_MANAGER_2_DESIGN_REPORT.md  LICENSE  README.md  README_CN.md  __init__.py  base_nodes.py  checkpoint_loader.py  extra_json_example.json  loraListExample.json  lora_power_loader.py  meta_json_example.json  pyproject.toml  pytest.ini
.codex/: manual_discrepancies.md
.codex/constitution/: product.md  tech-stack.md
.codex/guidelines/: api-contracts.md  architecture-index.md  decisions.md  fullscreen-toolbar.md  integration-guidelines.md  lora-power-loader.md  not_implemented.md  pending-model-mode.md  product-guidelines.md  terminology.md
.qwen/: settings.json
_codex/: backend_apis.md  design-current.md  design-notes.md
assets/: loraListExample.json
backend/: config.py  database.py  hikaze_model_manager.db  server.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
data/: db.sqlite3
nodes/: __init__.py  checkpoint_loader.py  lora_power_loader.py
scripts/: api_test.py  manual_verify_db.py  manual_verify_migration.py  replace_images_with_placeholders.py  run_debug_server.py
tests/: conftest.py  test_config.py  test_database.py  test_database_models.py  test_database_tags.py  test_migration_importer.py  test_migration_manager.py  test_migration_processor.py  test_migration_worker.py  test_server_app.py  test_server_port.py
util/: __init__.py  dataclasses.py  lora_list_parser.py
web/: index.html  package-lock.json  tsconfig.json  vite.config.ts
(+218 files in other folders)
