[project]
name = "hikaze-model-manager-2"
version = "0.0.1"
description = "Custom ComfyUI node project scaffold (Python + Vue/TS) for Hikaze Model Manager 2."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.comfy]
web = "web/dist"
